1 远程连接class追加 2 画面move，ps，tomcat stop，start功能追加

--- a/myDjangoProject/templates/index.html
+++ b/myDjangoProject/templates/index.html
@@ -17,7 +17,7 @@
     <!-- Top line begins -->
     <div id="top">
         <div class="wrapper">
-            <a href="/home" title="" class="logo"><img src="/static/images/icons/logo.png" alt=""></a>
+            <!--<a href="/home" title="" class="logo"><img src="/static/images/icons/logo.png" alt=""></a>-->
         </div>
     </div>
     <!-- Top line ends -->
@@ -27,7 +27,7 @@
             <!-- Main nav -->
             <ul class="nav">
                 <li>
-                    <!--<a href="/home" title="" 　class="active"><img src="/static/images/icons/mainnav/dashboard.png" alt="" /><span>Dashboard</span></a>-->
+                    <a href="/home" title="" 　class="active"><img src="/static/images/icons/mainnav/dashboard.png" alt="" /><span>home</span></a>
                 </li>
                 <li>
                     <a href="/admin" title=""><img src="/static/images/icons/mainnav/forms.png" alt="" /><span>Admin</span></a>
@@ -54,20 +54,26 @@
                 <li>
                     <a href="#" title="Run Ant Build" class="tipN" id="runAntBuild"><img src="/static/images/icons/ant/ant.png" alt="" /></a>
                 </li>
-                <li>
+                <!--<li>
                     <a href="#" title="Ftp connect test" class="tipN"><img src="/static/images/icons/ant/ftpc.png" alt="" /></a>
+                </li>-->
+                <li>
+                    <a href="#" title="Move war to ftp" class="tipN" id="move"><img src="/static/images/icons/ant/move.png" alt="" /></a>
                 </li>
                 <li>
-                    <a href="#" title="Move war to ftp" class="tipN"><img src="/static/images/icons/ant/move.png" alt="" /></a>
+                    <a href="#" title="Tomcat shutdown" class="tipN" id="stop"><img src="/static/images/icons/ant/shutdown.png" alt="" /></a>
                 </li>
                 <li>
-                    <a href="#" title="Tomcat shutdown" class="tipN"><img src="/static/images/icons/ant/shutdown.png" alt="" /></a>
-                </li>
-                <li>
-                    <a href="#" title="Tomcat startup" class="tipN"><img src="/static/images/icons/ant/startup.png" alt="" /></a>
+                    <a href="#" title="Tomcat startup" class="tipN" id="start"><img src="/static/images/icons/ant/startup.png" alt=""/></a>
                 </li>
                 <li>
                     <a href="#" title="Recovery" class="tipN"><img src="/static/images/icons/ant/recovery.png" alt="" /></a>
+                </li>
+                <li>
+                    <a href="#" title="pstree" class="tipN" id="ps"><img src="/static/images/icons/ant/ps.png" alt="" /></a>
+                </li>
+                <li>
+                    <a href="#" title="reviewing the log" class="tipN" id="log"><img src="/static/images/icons/ant/log.png" alt="" /></a>
                 </li>
             </ul>
             <form action="" class="main">
